--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>learning git and github</title>
 </head>
 <body>
+<h1>Lorem ipsum dolor.</h1>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem consequatur, deleniti deserunt quia rerum ut.</p>
 
 </body>
 </html>
