--- a/index.html
+++ b/index.html
@@ -12,4 +12,16 @@
 <h4>Lorem ipsum dolor sit amet.</h4>
 
 </body>
+
+
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Document</title>
+</head>
+<body>
+
+</body>
 </html>
